--- a/package.json
+++ b/package.json
@@ -9,13 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.1.6",
+    "@mantine/dates": "^5.1.6",
+    "@mantine/form": "^5.1.6",
+    "@mantine/hooks": "^5.1.6",
+    "@mantine/modals": "^5.1.6",
+    "@mantine/next": "^5.1.6",
+    "@mantine/notifications": "^5.1.6",
+    "@mantine/nprogress": "^5.1.6",
+    "@supabase/auth-helpers-nextjs": "^0.2.7",
+    "@supabase/auth-helpers-react": "^0.2.3",
+    "@supabase/supabase-js": "^1.35.6",
+    "@tabler/icons": "^1.82.0",
+    "axios": "^0.27.2",
+    "dayjs": "^1.11.5",
+    "luxon": "^3.0.1",
     "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^17.0.2",
+    "react-big-calendar": "^1.5.0",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/luxon": "^3.0.0",
     "@types/node": "18.7.5",
     "@types/react": "18.0.17",
+    "@types/react-big-calendar": "^0.38.1",
     "@types/react-dom": "18.0.6",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
