--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@supabase/auth-helpers-react": "^0.2.3",
     "@supabase/supabase-js": "^1.35.6",
     "@tabler/icons": "^1.82.0",
+    "@tanstack/react-query": "^4.2.1",
+    "@tanstack/react-query-devtools": "^4.2.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "luxon": "^3.0.1",
