--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tanstack/react-query-devtools": "^4.2.1",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
+    "jotai": "^1.8.1",
     "luxon": "^3.0.1",
     "next": "12.2.5",
     "react": "^17.0.2",
