--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "next": "12.2.5",
     "react": "^17.0.2",
     "react-big-calendar": "^1.5.0",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "twilio": "^3.81.0"
   },
   "devDependencies": {
     "@types/luxon": "^3.0.0",
