--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "@tabler/icons": "^1.82.0",
     "@tanstack/react-query": "^4.2.1",
     "@tanstack/react-query-devtools": "^4.2.1",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "jotai": "^1.8.1",
@@ -39,7 +43,8 @@
     "next": "12.2.5",
     "next-transpile-modules": "^9.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/luxon": "^3.0.0",
