--- a/package.json
+++ b/package.json
@@ -6,53 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress": "cypress open"
   },
   "dependencies": {
-    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.0",
     "@emotion/server": "^11.10.0",
-    "@fullcalendar/core": "^5.11.3",
-    "@fullcalendar/daygrid": "^5.11.3",
-    "@fullcalendar/interaction": "^5.11.3",
-    "@fullcalendar/list": "^5.11.3",
-    "@fullcalendar/react": "^5.11.2",
-    "@fullcalendar/timegrid": "^5.11.3",
-    "@mantine/core": "^5.1.6",
-    "@mantine/dates": "^5.1.6",
-    "@mantine/form": "^5.1.6",
-    "@mantine/hooks": "^5.1.6",
-    "@mantine/modals": "^5.1.6",
-    "@mantine/next": "^5.1.6",
-    "@mantine/notifications": "^5.1.6",
-    "@mantine/nprogress": "^5.1.6",
-    "@supabase/auth-helpers-nextjs": "^0.2.7",
-    "@supabase/auth-helpers-react": "^0.2.3",
-    "@supabase/supabase-js": "^1.35.6",
+    "@fullcalendar/core": "^6.1.5",
+    "@fullcalendar/daygrid": "^6.1.5",
+    "@fullcalendar/interaction": "^6.1.5",
+    "@fullcalendar/list": "^6.1.5",
+    "@fullcalendar/react": "^6.1.5",
+    "@fullcalendar/timegrid": "^6.1.5",
+    "@mantine/core": "^5.4.0",
+    "@mantine/dates": "^5.4.0",
+    "@mantine/form": "^5.4.0",
+    "@mantine/hooks": "^5.4.0",
+    "@mantine/modals": "^5.4.0",
+    "@mantine/next": "^5.4.0",
+    "@mantine/notifications": "^5.4.0",
+    "@mantine/nprogress": "^5.4.0",
+    "@supabase/auth-helpers-nextjs": "^0.5.6",
+    "@supabase/auth-helpers-react": "^0.3.1",
+    "@supabase/supabase-js": "^2.12.1",
     "@tabler/icons": "^1.82.0",
     "@tanstack/react-query": "^4.2.1",
     "@tanstack/react-query-devtools": "^4.2.1",
-    "@trpc/client": "^9.27.2",
-    "@trpc/next": "^9.27.2",
-    "@trpc/react": "^9.27.2",
-    "@trpc/server": "^9.27.2",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "jotai": "^1.8.1",
-    "luxon": "^3.0.1",
-    "next": "12.2.5",
-    "next-transpile-modules": "^9.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "zod": "^3.19.1"
+    "luxon": "^3.3.0",
+    "next": "13.2.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/luxon": "^3.0.0",
+    "@types/luxon": "^3.2.0",
     "@types/node": "18.7.5",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "cypress": "^10.8.0",
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "eslint-config-next": "13.2.4",
+    "supabase": "^1.45.2",
     "typescript": "4.7.4"
   }
 }
