--- a/package.json
+++ b/package.json
@@ -6,49 +6,53 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "cypress": "cypress open"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/server": "^11.10.0",
     "@fullcalendar/core": "^6.1.5",
     "@fullcalendar/daygrid": "^6.1.5",
     "@fullcalendar/interaction": "^6.1.5",
     "@fullcalendar/list": "^6.1.5",
     "@fullcalendar/react": "^6.1.5",
+    "@fullcalendar/resource": "^6.1.5",
+    "@fullcalendar/resource-timegrid": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
-    "@mantine/core": "^5.4.0",
-    "@mantine/dates": "^5.4.0",
-    "@mantine/form": "^5.4.0",
-    "@mantine/hooks": "^5.4.0",
-    "@mantine/modals": "^5.4.0",
-    "@mantine/next": "^5.4.0",
-    "@mantine/notifications": "^5.4.0",
-    "@mantine/nprogress": "^5.4.0",
-    "@supabase/auth-helpers-nextjs": "^0.5.6",
-    "@supabase/auth-helpers-react": "^0.3.1",
-    "@supabase/supabase-js": "^2.12.1",
-    "@tabler/icons": "^1.82.0",
-    "@tanstack/react-query": "^4.2.1",
-    "@tanstack/react-query-devtools": "^4.2.1",
-    "axios": "^0.27.2",
-    "dayjs": "^1.11.5",
+    "@mantine/core": "^7.6.2",
+    "@mantine/dates": "^7.6.2",
+    "@mantine/hooks": "^7.6.2",
+    "@mantine/modals": "^7.6.2",
+    "@mantine/notifications": "^7.6.2",
+    "@mantine/nprogress": "^7.6.2",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.40.0",
+    "@tabler/icons": "^3.1.0",
+    "@tabler/icons-react": "^3.1.0",
+    "@tanstack/react-query": "^5.40.1",
+    "@tanstack/react-query-devtools": "^5.40.1",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "jotai": "^1.8.1",
     "luxon": "^3.3.0",
-    "next": "13.2.4",
+    "mantine-react-table": "^2.0.0-beta.0",
+    "next": "^14.1.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.47.0",
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/luxon": "^3.2.0",
-    "@types/node": "18.7.5",
-    "@types/react": "18.0.17",
+    "@types/node": "^20.11.1",
+    "@types/react": "^18.2.70",
     "@types/react-dom": "18.0.6",
-    "cypress": "^10.8.0",
     "eslint": "8.22.0",
     "eslint-config-next": "13.2.4",
-    "supabase": "^1.45.2",
-    "typescript": "4.7.4"
+    "postcss": "^8.4.37",
+    "postcss-preset-mantine": "^1.13.0",
+    "postcss-simple-vars": "^7.0.1",
+    "stylelint": "^16.3.0",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "typescript": "^5.4.5"
   }
 }
