--- a/package.json
+++ b/package.json
@@ -16,24 +16,25 @@
     "@fullcalendar/react": "^6.1.5",
     "@fullcalendar/resource": "^6.1.5",
     "@fullcalendar/resource-timegrid": "^6.1.5",
+    "@fullcalendar/resource-timeline": "^6.1.5",
+    "@fullcalendar/scrollgrid": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
-    "@mantine/core": "^7.6.2",
-    "@mantine/dates": "^7.6.2",
-    "@mantine/hooks": "^7.6.2",
-    "@mantine/modals": "^7.6.2",
-    "@mantine/notifications": "^7.6.2",
-    "@mantine/nprogress": "^7.6.2",
-    "@supabase/ssr": "^0.1.0",
+    "@mantine/core": "^7.10.1",
+    "@mantine/dates": "^7.10.1",
+    "@mantine/hooks": "^7.10.1",
+    "@mantine/modals": "^7.10.1",
+    "@mantine/notifications": "^7.10.1",
+    "@mantine/nprogress": "^7.10.1",
+    "@supabase/ssr": "^0.3.0",
     "@supabase/supabase-js": "^2.40.0",
-    "@tabler/icons": "^3.1.0",
-    "@tabler/icons-react": "^3.1.0",
+    "@tabler/icons-react": "^3.5.0",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "jotai": "^1.8.1",
     "luxon": "^3.3.0",
-    "mantine-react-table": "^2.0.0-beta.0",
+    "mantine-react-table": "^2.0.0-beta.4",
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
