--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.10",
+    "framer-motion": "^11.2.10",
     "jotai": "^1.8.1",
     "luxon": "^3.3.0",
     "mantine-react-table": "^2.0.0-beta.4",
