--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/resource-timeline": "^6.1.5",
     "@fullcalendar/scrollgrid": "^6.1.5",
     "@fullcalendar/timegrid": "^6.1.5",
+    "@hookform/resolvers": "^3.6.0",
     "@mantine/core": "^7.10.1",
     "@mantine/dates": "^7.10.1",
     "@mantine/hooks": "^7.10.1",
@@ -37,11 +38,13 @@
     "jotai": "^1.8.1",
     "luxon": "^3.3.0",
     "mantine-react-table": "^2.0.0-beta.4",
-    "next": "^14.1.3",
+    "next": "^14.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "tiny-invariant": "^1.3.3"
+    "tiny-invariant": "^1.3.3",
+    "zod": "^3.23.8",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.35.6",
